--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <base href="/" />
+
     {{content-for "head"}}
 
     <link rel="stylesheet" href="assets/vendor.css">
